<resources>
    <string name="app_name">FoodBattle</string>
    <string name="welcome">歡迎回來</string>
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="remember">記得我的帳號密碼</string>
    <string name="signIn">登入</string>
    <string name="register">註冊新帳號</string>
    <string name="check">檢查帳號</string>
    <string name="email">Email</string>
    <string name="check_password">確認密碼</string>
    <string name="go_to_login">已經有帳號？登入</string>
    <string name="sign_up">立即註冊</string>
    <string name="input_number">請輸入信箱收到的認證碼</string>
    <string name="ok">確認</string>
    <string name="resend">重新寄出</string>
    <string name="try_another">試試看別的信箱</string>
    <string name="send">寄出新的驗證碼</string>
    <string name="sucess">恭喜！驗證成功</string>
    <string name="next">下一步</string>
    <string name="fail">很可惜！驗證失敗</string>
    <string name="rewrite">重新輸入驗證碼</string>
    <string name="name">暱稱</string>
    <string name="style">料理風格</string>
    <string name="dish">拿手菜</string>
    <string name="introduce">自我介紹</string>
    <string name="skip">跳過</string>
    <string name="todo">TODO</string>
    <string name="nav_menu">推薦菜單</string>
    <string name="nav_account">個人空間</string>
    <string name="nav_market">團購市集</string>

    <string name="todayrecommend">今日推薦</string>

    <string name="cake1">優格戚風蛋糕</string>

    <string name="cake_category">分類:甜點</string>

    <string name="cake_difficulty">難易度:★★(簡單)</string>

    <string name="cake1info">份量:4人份\n分類:甜點\n難易度:★★(簡單)</string>

    <string name="cake1info2">份量:2人份\n分類:甜點\n難易度:★★★(普通)</string>

    <string name="cake1info3">份量:2人份\n分類:義式\n難易度:★★★★(偏難)</string>

    <string name="cake1info4">份量:1人份\n分類:甜點\n難易度:★★(簡單)</string>

    <string name="more">></string>

    <string name="like">2000</string>

    <string name="chinese">中式料理</string>

    <string name="follow">追蹤</string>

    <string name="heart">♥</string>

    <string name="space"> </string>

    <string name="italy">義式料理</string>

    <string name="desert">各式甜點</string>

    <string name="back">◄</string>

    <string name="styledish">料理風格/拿手菜</string>

    <string name="post">我發表的菜單</string>

    <string name="collect">我收藏的菜單</string>

    <string name="cake2">檸檬戚風蛋糕</string>

    <string name="chicken">迷迭香煎雞排</string>

    <string name="icecream">香蕉派冰淇淋</string>

    <string name="buyers">50</string>

    <string name="buy">跟團</string>

    <string name="menu_info1">簡介/製作緣由</string>

    <string name="menu_info2">菜單總熱量</string>

    <string name="menu_info3">食材清單</string>

    <string name="menu_info4">調味料清單</string>

    <string name="menu_info5">製作步驟</string>

    <string name="menu_info6">影片教學</string>

    <string name="menu_info7">難易度</string>

    <!-- cake_info-->


    <string name="cake_info1">無油蛋糕也可以很濕潤!\n利用優格的保濕性讓蛋糕變得健康又美味,\n食材更是簡單,只要4種食材就能搞定~\n表面是淋上優格,不是鮮奶油!\n再用新鮮水果裝飾就超完美!</string>

    <string name="cake_info2">800大卡</string>

    <string name="cake_info3">雞蛋 3顆\n低筋麵粉 50g\n無糖優格 45g\n細糖 50g</string>

    <string name="cake_info4">細糖</string>

    <string name="cake_info5_1">(1/10) 將蛋白蛋黃分開,蛋黃先打勻(烤箱160/140度預熱)</string>

    <string name="cake_info5_2">(2/10)加入無糖優格攪拌均勻</string>

    <string name="cake_info5_3">(3/10)加入過篩的低筋麵粉混合</string>

    <string name="cake_info5_4">(4/10)糖分3次加入蛋白中打至濕性9分發</string>

    <string name="cake_info5_5">(5/10)取些許的蛋白拌入麵糊裡混合,可以讓麵糊穩定</string>

    <string name="cake_info5_6">(6/10)再將麵糊全部倒入打發的蛋白中輕拌混合</string>

    <string name="cake_info5_7">(7/10)將麵糊倒入戚風模中,敲出空氣</string>

    <string name="cake_info5_8">(8/10)放入預熱好的烤箱中烤30分鐘後出爐,將蛋糕敲一下排出空氣,倒扣放涼</string>

    <string name="cake_info5_9">(9/10)放涼後即可脫模</string>

    <string name="cake_info5_10">(10/10)表面裝飾可淋上健康的優格和水果裝飾,就可以送人囉!</string>

    <string name="cake_info7">★★☆☆☆</string>

    <string name="vegetable">醬炒空心菜</string>

    <string name="shrimp">甜椒炒蝦仁</string>


    <string name="buy_info1">商品名稱</string>
    <string name="buy_info2">人數限制</string>
    <string name="buy_info3">付款方式</string>
    <string name="buy_info4">配送方式</string>
    <string name="buy_info5">預估到貨日期</string>
    <string name="buy_info6">相關照片</string>


    <string name="cake_buy_info1">無油蛋糕也可以很濕潤!\n利用優格的保濕性讓蛋糕變得健康又美味,\n食材更是簡單,只要4種食材就能搞定~\n表面是淋上優格,不是鮮奶油!\n再用新鮮水果裝飾就超完美!</string>
    <string name="cake_buy_info2">至少20人/最多100人</string>
    <string name="cake_buy_info3">貨到付款</string>
    <string name="cake_buy_info4">宅配</string>
    <string name="cake_buy_info5">2018.06.15</string>

    <!-- TODO: Remove or change this placeholder text -->


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_conductgroupbuy">ConductgroupbuyActivity</string>

    <string name="title_activity_add_image">AddImageActivity</string>

    <string name="title_activity_market">MarketActivity</string>
</resources>
