<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/back">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="292dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/cake"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="510dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corner_name"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cake_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/cake1"
                        android:textColor="@color/darkGray"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/cake_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/cake_category"
                        android:textColor="@android:color/background_light"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/cake_difficulty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/cake_difficulty"
                        android:textColor="@android:color/background_light"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/like"
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            app:srcCompat="@drawable/like"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/followamount"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:text="@string/like"
                            android:textSize="20sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/baseline_account_box_black_18dp"
                    tools:ignore="ContentDescription"/>

                <LinearLayout
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/poster_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/name"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/poster_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/account"
                        android:textSize="20sp"/>
                </LinearLayout>

                <Button
                    android:id="@+id/followbutton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="#e69fe378"
                    android:text="@string/follow" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rectangle_info"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/menu_info1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:hapticFeedbackEnabled="false"
                    android:text="@string/menu_info1"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/cake_info1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cake_info1"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rectangle_info"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/menu_info2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:hapticFeedbackEnabled="false"
                    android:text="@string/menu_info2"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/cake_info2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cake_info2"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rectangle_info"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/menu_info3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:hapticFeedbackEnabled="false"
                    android:text="@string/menu_info3"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/cake_info3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cake_info3"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rectangle_info"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/menu_info4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:hapticFeedbackEnabled="false"
                    android:text="@string/menu_info4"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/cake_info4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cake_info4"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rectangle_info"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/menu_info5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:hapticFeedbackEnabled="false"
                    android:text="@string/menu_info5"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewPager_cake_info5"
                    android:layout_width="match_parent"
                    android:layout_height="450dp">
                </android.support.v4.view.ViewPager>

                <LinearLayout
                    android:id="@+id/SliderDots"

                    android:orientation="horizontal"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rectangle_info"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/menu_info6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:hapticFeedbackEnabled="false"
                    android:text="@string/menu_info6"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <VideoView
                    android:id="@+id/videoView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rectangle_info"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/menu_info7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:hapticFeedbackEnabled="false"
                    android:text="@string/menu_info7"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/cake_info7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cake_info7"
                    android:textSize="15sp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>